[tool.poetry]
name = "repl_python3_DumBot-1"
version = "0.1.0"
description = ""
authors = ["DrDum <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
gspread = "^4.0.1"
oauth2client = "^4.1.3"
pandas = "^1.3.3"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
